ags (1.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved max-precision configuration preferences to proper reset
	* improved ags_notebook_size_request() to always use -1 as requisition width
	* updated gtk-doc related Since field to have value 1.0.0
	* TODO:JK: extended user manual

ags (1.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented :thread-pool property of AgsReturnableThread
	* implemented :max-precision of AgsThread
	* implemented configuration option of thread's max-precision property
	* implemented sticky controls
	* improved LV2UI plugin support to set controls value
	* fixed wrecked widget allocation of AgsEditor and AgsAutomationEditor

ags (1.0.0-beta)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsPasswordStore and AgsAuthentication interfaces
	* TODO:JK: implemented destroy functions
	* TODO:JK: implemented iterator and recycling thread
	* TODO:JK: implemented AgsAbstractBasePluginManager
	* TODO:JK: implemented AgsPluginFactory
	* TODO:JK: implemented missing interface functions of AgsConnectable, ...
	* TODO:JK: implemented MIDI and sequencer API
	* TODO:JK: refactored AgsLadspaManager, AgsDssiManager, AgsLv2Manager and AgsLv2uiManager to inherit of AgsAbstractBasePluginManager
	* TODO:JK: extended AgsSoundProvider interface to provide plugin managers
	* extended AgsServiceProvider interface to provide managers

ags (0.9.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsRampAccelerationDialog
	* implemented AgsSelectAccelerationDialog
	* implemented AgsSelectNoteDialog
	* improved functional-tests.mk to solve linker issue with circular dependency
	* improved unit-tests.mk to linker issue with circular dependency
	* added AGS_RECALL_RUN_FIRST and AGS_RECALL_RUN_LAST flags
	* fixed ags_turtle_load() buffer index excess
	* fixed ags_functional_note_edit_test.c array index excess in main()