@@ -54,6 +54,11 @@
     </listitem>
     <listitem>
       <para>
+	To change multiple grouped controls at once check sticky controls.
+      </para>
+    </listitem>
+    <listitem>
+      <para>
 	Edit gives you editing options.
       </para>
       
