@@ -86,6 +86,10 @@ widget_class "AgsMidiDialog*" style "main_window"
 widget_class "AgsEnvelopeDialog*" style "main_window"
 widget_class "AgsCropNoteDialog*" style "main_window"
 widget_class "AgsMoveNoteDialog*" style "main_window"
+widget_class "AgsSelectNoteDialog*" style "main_window"
+widget_class "AgsMoveAccelerationDialog*" style "main_window"
+widget_class "AgsSelectAccelerationDialog*" style "main_window"
+widget_class "AgsSelectAccelerationDialog*" style "main_window"
 widget_class "AgsConnectionEditor*" style "main_window"
 widget_class "AgsMachineSelection*" style "main_window"
 widget_class "AgsPluginBrowser*" style "main_window"
