@@ -3,8 +3,12 @@ ags (1.0.1)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* improved max-precision configuration preferences to proper reset
 	* improved ags_notebook_size_request() to always use -1 as requisition width
+	* extended user's manual
+	* added section "Move notes" to chapter 3
+	* added section "Crop notes" to chapter 3
+	* added section "Select notes" to chapter 3
 	* updated gtk-doc related Since field to have value 1.0.0
-	* TODO:JK: extended user manual
+	* fixed missing ags.rc entries of AgsSelectNoteDialog, AgsMoveAccelerationDialog, AgsSelectAccelerationDialog and AgsRampAccelerationDialog
 
 ags (1.0.0)
 
